=== (unreleased)

* Don't busy-wait on session close for remaining channels to close [Will Bryant]

* Ruby 1.9 compatibility [Jamis Buck]

* Fix Cipher#final to correctly flag a need for a cipher reset [Jamis Buck]


=== 2.0.4 / 27 Aug 2008

* Added Connection::Session#closed? and Transport::Session#closed? [Jamis Buck]

* Numeric host names in .ssh/config are now parsed correct [Yanko Ivanov]

* Make sure the error raised when a public key file is malformed is more informative than a MethodMissing error [Jamis Buck]

* Cipher#reset is now called after Cipher#final, with the last n bytes used as the next initialization vector [Jamis Buck]


=== 2.0.3 / 27 Jun 2008

* Make Net::SSH::Version comparable [Brian Candler]

* Fix errors in port forwarding when a channel could not be opened due to a typo in the exception name [Matthew Todd]

* Use #chomp instead of #strip when cleaning the version string reported by the remote host, so that trailing whitespace is preserved (this is to play nice with servers like Mocana SSH) [Timo Gatsonides]

* Correctly parse ssh_config entries with eq-sign delimiters [Jamis Buck]

* Ignore malformed ssh_config entries [Jamis Buck]

=== 2.0.2 / 29 May 2008

* Make sure the agent client understands both RSA "identities answers" [Jamis Buck]

* Fixed key truncation bug that caused hmacs other than SHA1 to fail with "corrupt hmac" errors [Jamis Buck]

* Fix detection and loading of public keys when the keys don't actually exist [David Dollar]


=== 2.0.1 / 5 May 2008

* Teach Net::SSH about a handful of default key names [Jamis Buck]


=== 2.0.0 / 1 May 2008

* Allow the :verbose argument to accept symbols (:debug, etc.) as well as Logger level constants (Logger::DEBUG, etc.) [Jamis Buck]


=== 2.0 Preview Release 4 (1.99.3) / 19 Apr 2008

* Make sure HOME is set to something sane, even on OS's that don't set it by default [Jamis Buck]

* Add a :passphrase option to specify the passphrase to use with private keys [Francis Sullivan]
